--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -1,4 +1,4 @@
 ## Append samples you want in your CSV to this file as resources ##
 resources:
-- extension.yaml
+- extensions.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
